--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,6 +145,7 @@ body {
                 position: relative; 
             }
             .pictures {
+                background-image: url("orchid-for-web.png");
                 /* font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; */
                 margin: 10px;
                 height: auto;
